add download report api
