# api/openapi.yaml
@@ -334,6 +334,45 @@ paths:
         "500":
           $ref: "#/components/responses/InternalError"
 
+  /report/{filename}:
+    get:
+      tags:
+        - File
+      summary: Download report file
+      operationId: GetReportFile
+
+      security:
+        - bearerAuth:
+            - report:download
+
+      parameters:
+        - name: filename
+          in: path
+          required: true
+          schema:
+            type: string
+
+      responses:
+        "200":
+          description: Download report file successfully
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
+
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+
+        "403":
+          $ref: "#/components/responses/Forbidden"
+
+        "404":
+          $ref: "#/components/responses/NotFound"
+
+        "500":
+          $ref: "#/components/responses/InternalError"
+
 components:
   schemas:
     Server:
